--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,10 +1,9 @@
 
 spring:
+  profiles:
+    active: private
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://localhost:3306/pickMyItem
-    username: root
-    password: password
 
   jpa:
     open-in-view: false
