feat: cors 설정 추가

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -31,3 +31,6 @@ graphql:
   tools:
     schema-location-pattern: "**/*.graphqls"
     introspection-enabled: true
+
+http.cors.enabled: true
+http.cors.allow-origin: "*"
