feat: 인기순, 최신순 정렬 구현

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -13,6 +13,8 @@ spring:
       hibernate.show_sql: true
       hibernate.format_sql: true
       dialect: org.hibernate.dialect.MySQL5InnoDBDialect
+      hibernate:
+        default_batch_fetch_size: 100
   graphql:
     graphiql:
       enabled: true
